@startuml

skinparam classAttributeIconSize 0

interface BSTInterface <<interface>> {
    +BSTInterface() 
    +~BSTInterface()
    
	+{abstract} NodeInterface * getRootNode()
	+{abstract} bool add(int data)
	+{abstract} bool remove(int data)
	+{abstract} void clear()
}

class Factory {
    + {static} static BSTInterface * getBST();
}

interface NodeInterface <<interface>> {
    +NodeInterface()
    +~NodeInterface()
    
	+{abstract} int getData()
	+{abstract} NodeInterface * getLeftChild()
	+{abstract} NodeInterface * getRightChild()
}

Factory *-- BSTInterface
BSTInterface *-- NodeInterface

class Node {
    +int data
    +Node * left
    +Node * right
    
    +Node(const int& in_data, Node * l = NULL, Node * r = NULL)
    +~Node()
    +int getData()
    +Node * getLeftChild()
    +Node * getRightChild()
}

Node --|> NodeInterface

class BST {
    -Node * root
    -bool rec_add(Node * &in_root, int &in_data)
    -bool rec_remove(Node * &in_root, int &in_data)
    -void rec_replace_parent(Node * &old_root, Node * &local_root)

    +BST()
    +~BST()
    +NodeInterface * getRootNode()
    +bool add(int data)
    +bool remove(int data)
    +void clear()
}

BST --|> BSTInterface
BST *-- Node
Factory *-- BST

@enduml
